GNOME Bugzilla – Bug 794402
Does not open new terminal in a new window sometimes
Last modified: 2018-03-23 12:34:33 UTC
Using 3.27.92 * Make sure that in the preferences "Window" is selected for opening a new terminal * Right click anywhere and select "new terminal" Expected: * a new window opens Actual: * a new tab opens, sometimes I'm not 100% sure, but I think it is more likely if I start "nano" and right click there and open a new terminal instead of doing the same without an active application.
Right-clicking or Ctrl+clicking on the "New Terminal" menu entry does the opposite of what's set in the Preferences. This is intentional. I think it's pretty misleading, especially since if you right-click to open the menu, it's likely that you'll also right-click to invoke that menu entry (or just leave the button pressed and release there, which also invokes the opposite action). I think invoking the opposite action should be restricted to Ctrl+clicking.
Ahhhhh, that's it, thanks!
Created attachment 369787 [details] [review] Invert on Ctrl only, not on right-click
Comment on attachment 369787 [details] [review] Invert on Ctrl only, not on right-click Hmm right, I hadn't considered this when adding the inversion for clicks too. Master and 3-28 please. Thanks!
> I hadn't considered this when adding the inversion for clicks too. Wouldn't have occurred to me either, thanks Christoph for the bugreport! :) Submitted.
Thanks!
*** Bug 794618 has been marked as a duplicate of this bug. ***