window: Do not change New Terminal's behavior on right click

https://bugzilla.gnome.org/show_bug.cgi?id=794402